[package]
name = "c12-parser"
version = "0.0.1"
authors = ["YONGQI <betterhyq@qq.com>"]
edition = "2024"
description = "A template for creating a crate package"
readme = "README.md"
homepage = "https://github.com/betterhyq/packageName"
repository = "https://github.com/betterhyq/packageName.git"
license = "MIT"
keywords = [""]
categories = ["development-tools"]

[dependencies]
detect-indent = "0.1.0"
ini = "1.3.0"
json5 = "1.3.1"
jsonc-parser = "0.29.0"
regex = "1.12.3"
toml-span = "0.7.0"
yaml = "0.3.0"
