[package]
name = "c12-parser"
version = "1.0.0"
authors = ["YONGQI <betterhyq@qq.com>"]
edition = "2024"
description = "A parser for C12 configuration files, support JSON, JSON5, JSONC, YAML, TOML, INI"
readme = "README.md"
homepage = "https://github.com/betterhyq/c12-parser"
repository = "https://github.com/betterhyq/c12-parser.git"
license = "MIT"
keywords = ["configuration", "parser", "json", "yaml", "toml", "ini"]
categories = ["development-tools"]

[dependencies]
detect-indent = "0.1.0"
ini = "1.3.0"
json5 = "1.3.1"
jsonc-parser = { version = "0.29.0", features = ["serde"] }
once_cell = "1.20.2"
regex = "1.12.3"
toml-span = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
